finish project version 1.2