@@ -12,7 +12,11 @@ libraryDependencies += guice
 
 libraryDependencies += "javax.xml.bind" % "jaxb-api" % "2.1"
 
+// web socket
 libraryDependencies += ws
+
+// mock for test
+libraryDependencies += "org.mockito" % "mockito-core" % "2.10.0" % "test"
 
 // Test Database
 libraryDependencies += "com.h2database" % "h2" % "1.4.196"
@@ -23,3 +27,12 @@ libraryDependencies += "org.awaitility" % "awaitility" % "2.0.0" % Test
 
 // Make verbose tests
 testOptions in Test := Seq(Tests.Argument(TestFrameworks.JUnit, "-a", "-v"))
+
+javaOptions in Test ++= Seq(
+  "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9998",
+  "-Xms512M",
+  "-Xmx1536M",
+  "-Xss1M",
+  "-XX:MaxPermSize=384M"
+)
+
